--- a/Prototypes/Overmind/styles.css
+++ b/Prototypes/Overmind/styles.css
@@ -59,3 +59,11 @@ section#player-info {
     flex-direction: column;
     border-top: 2px solid white;
 }
+
+#terrain-info-display{
+    position: fixed;
+}
+
+.terrain-info-display-hide {
+    display: none;
+}
